# intellidog

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.githooks/: commit-msg
docker/: Dockerfile  Dockerfile.grafana
docs/: architecture.md  architecture.png.md  intellidog.pptx
grafana/config/: grafana.ini
grafana/provisioning/alerting/: alert-rules.yaml  contact-points.yaml  notification-policies.yaml
grafana/provisioning/dashboards/: dashboards.yaml  intellidog.json
grafana/provisioning/datasources/: infinity.yaml  sqlite.yaml
rules/: default_rules.yaml  example_rules.json  llm_anomaly_rule.yaml
scripts/: run_screenshots.sh  take_screenshots.js  take_screenshots.py
src/: __init__.py  config.py  main.py
src/api/: alerts.py  health.py  ingest.py  metrics.py  query.py  webhook.py
src/bus/: publisher.py  subscriber.py
src/db/: connection.py  migrations.py  repository.py
src/engine/: alert_engine.py  compaction.py  llm_analyser.py
src/models/: __init__.py  alert.py  event.py  metric.py
src/rules/: loader.py
tests/: conftest.py  test_alert_engine.py  test_alerts_api.py  test_compaction.py  test_connection.py  test_coverage_extras.py  test_health.py  test_ingest.py  test_llm_analyser.py  test_metrics.py  test_mock_llm_analyser.py  test_publisher.py  test_query.py  test_rules_loader.py  test_subscriber.py
tools/: generate_alerts.py  generate_events.py  inject_anomaly.py  make_pptx.py  query_events.py
transcripts/: transcript.1a.md
