[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidog"
version = "0.1.0"
description = "intellidog"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "David Kierans", email = "dkierans@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Add runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.0",
    "isort>=5.13",
    "autopep8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 119
