[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidog"
version = "0.1.0"
description = "Intelligent Observability & Event Watchdog"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "David Kierans", email = "dkierans@gmail.com" }]
keywords = ["observability", "sre", "watchdog", "alerting", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.26.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.0",
    "isort>=5.13",
    "autopep8",
    "python-pptx>=1.0.0",
    "requests>=2.32.0",
]

[project.scripts]
intellidog = "src.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 119
